 - Qt: Allow use of modifier keys as input
 - Qt: Optimize log viewer
 - GBA RR: Starting from savestate now embeds the savegame
 - Libretro: Add install target for libretro core
 - 3DS: Update to new ctrulib API
 - GBA RR: Add preliminary SRAM support for VBM loading
 - GBA RR: Add support for resets in movies
 - GBA Input: Consolidate GBA_KEY_NONE and GBA_NO_MAPPING

0.3.2: (2015-12-16)
Bugfixes:
 - ARM7: Fix STRT/STRBT
 - ARM7: Implement undefined STRH/LDRH/LDRSH/LDRSB versions
 - ARM7: Fix bank switching with LDR[B]T/STR[B]T
 - Libretro: Fix problems with rumble not turning off
 - GBA: Fix idle skip state being retained between games
 - GBA: Initialize uninitialized pristineRom and pristineRomSize members
 - GBA BIOS: Fix CpuSet on 0x01XXXXXX addresses
 - GBA BIOS: Fix Sqrt sign
 - GBA BIOS: Fix misaligned RLUnCompReadNormalWrite*
 - GBA Hardware: Fix Game Boy Player rumble in Pokemon Pinball
 - GBA Memory: Fix DMA behavior for SRAM accesses
 - GBA Memory: Fix Store8 to OBJ VRAM
 - GBA Memory: Fix alignment of LDM/STM on SRAM
 - GBA Memory: Fix unaligned out-of-bounds ROM loads
 - GBA Memory: Fix timing of DMAs
 - GBA Video: Fix _mix for 15-bit color
 - GBA Video: Fix OAM and palette initialization
 - OpenGL: Fix fast-forward on some OpenGL drivers where it may block early
 - Qt: Use safer isLoaded check in GameController
 - Qt: Fix a race condition in PainterGL that could lead to a crash
 - Qt: Fix clear button/analog buttons in gamepad mapper on some platforms
 - Qt: Fix font size in memory viewer
 - Qt: Fix a crash in the memory viewer
 - Qt: Add additional checks in CheatModel to prevent crashes
 - Qt: Fix race condition with setting sample rate
 - Qt: Fix crash when closing multiplayer windows
 - Qt: Fix resetting while paused
Misc:
 - GBA Audio: Implement missing flags on SOUNDCNT_X register
 - Qt: Add mute option to menu

0.3.1: (2015-10-24)
Bugfixes:
 - ARM7: Fix instruction decoding of Thumb shifts
 - GBA: Deinit savegame when unloading a ROM